clusters/aws-production/apps/nestora-chocolates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestora-chocolates
  labels:
    name: nestora-chocolates
    environment: production
