clusters/aws-production/apps/nestora-chocolates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestora-chocolates-service
  namespace: nestora-chocolates
  labels:
    app: nestora-chocolates
    environment: production
spec:
  selector:
    app: nestora-chocolates
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
